put/get working in strict mode

--- a/doc/implementation.tex
+++ b/doc/implementation.tex
@@ -1,1 +1,8 @@
 \section{Implementation}
+
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=\linewidth]{figs/put}
+  \caption{Slow motion {\tt put()} operation}
+  \label{fig:put}
+\end{figure}
