added some figures

--- a/doc/implementation.tex
+++ b/doc/implementation.tex
@@ -1,8 +1,15 @@
 \section{Implementation}
 
-\begin{figure}[h]
+\begin{figure*}[h]
   \centering
   \includegraphics[width=\linewidth]{figs/put}
   \caption{Slow motion {\tt put()} operation}
   \label{fig:put}
-\end{figure}
+\end{figure*}
+
+\begin{figure*}[h]
+  \centering
+  \includegraphics[width=\linewidth]{figs/hwsw}
+  \caption{Hardware/Software Abstractions}
+  \label{fig:hwsw}
+\end{figure*}
