--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1,22 +1,24 @@
 %\documentclass[letterpaper,times,10pt]{article}
 %\documentclass[letterpaper,times,10pt,twocolumn]{article}
-\documentclass[letterpaper,10pt,times]{IEEEtran}
+\documentclass[conference,letterpaper,10pt,times]{IEEEtran}
 %\usepackage[top=.9in,left=1in,right=.9in,bottom=1in]{geometry}
 %\usepackage{latex8}
 %\usepackage{fullpage}
-\usepackage{textcomp}
-\usepackage{mathcomp}
-\usepackage{listings}
-\usepackage{amsmath}
-\usepackage{latexsym}
-\usepackage[plain]{algorithm}
-\usepackage{epsfig}
-\usepackage{setspace}
+\usepackage{cite}
 \usepackage{verbatim}
-\usepackage{subfig}
-\usepackage{wrapfig}
-\usepackage{times}
-\usepackage{url}
+\usepackage[pdftex]{graphicx}
+%\usepackage{textcomp}
+%\usepackage{mathcomp}
+%\usepackage{listings}
+%\usepackage{amsmath}
+%\usepackage{latexsym}
+%\usepackage[plain]{algorithm}
+%\usepackage{epsfig}
+%\usepackage{setspace}
+%\usepackage{subfig}
+%\usepackage{wrapfig}
+%\usepackage{times}
+%\usepackage{url}
 %\usepackage[small,compact]{titlesec}
 
 
@@ -57,7 +59,7 @@ larkinsb@rhodes.edu & \\
 \input{related}
 \input{conclusion}
 
-\singlespacing
+%\singlespacing
 \bibliographystyle{IEEEtran}
 %\bibliography{IEEEfull,refs,dsmbiblio}
 %\input{appendix}
