added some references

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -18,7 +18,7 @@
 %\usepackage{subfig}
 %\usepackage{wrapfig}
 %\usepackage{times}
-%\usepackage{url}
+\usepackage{url}
 %\usepackage[small,compact]{titlesec}
 
 
@@ -61,6 +61,6 @@ larkinsb@rhodes.edu & \\
 
 %\singlespacing
 \bibliographystyle{IEEEtran}
-%\bibliography{IEEEfull,refs,dsmbiblio}
+\bibliography{bibdb}
 %\input{appendix}
 \end{document}
