--- a/doc/related.tex
+++ b/doc/related.tex
@@ -1,1 +1,6 @@
 \section{Related Work}
+
+\cite{fompi13,cmpi10,mht15}
+\cite{prefix04,chord01,kademlia02,pastry01,memcached04}
+\cite{zht13}
+\cite{memcached12}
