--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -30,15 +30,13 @@
 \author{
 %\begin{normalsize}
 \begin{tabular}{cc}
-D. Brian Larkins & James Dinan\\
-Dept. of Mathematics and Computer Science    & Intel Corporation\\
-Rhodes College                               & Boston, MA 01234\\
-Memphis, TN                                  & james.dinan@intel.com\\
-larkinsb@rhodes.edu & \\
+D. Brian Larkins         & James Dinan\\
+Rhodes College          & Intel Corporation\\
+Memphis, TN  38112  & Boston, MA 01234\\
+larkinsb@rhodes.edu  & james.dinan@intel.com\\
 \end{tabular}
 %\end{normalsize}
 }
-
 
 \begin{document}
 
@@ -52,8 +50,6 @@ larkinsb@rhodes.edu & \\
 
 \input{abstract}
 \input{introduction}
-\input{overview}
-\input{progmodel}
 \input{implementation}
 \input{results}
 \input{related}
