Update bib and ack

--- a/doc/comhpc16/bibdb.bib
+++ b/doc/comhpc16/bibdb.bib
@@ -237,3 +237,92 @@
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/bigdataconf/2015},
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
+
+@misc{ openshmem-1.3,
+    key={{OpenSHMEM Specification Committee}},
+    title={{OpenSHMEM} Application Programming Interface, Version 1.3},
+    month=feb,
+    year=2016,
+    howpublished={\url{http://www.openshmem.org}}
+}
+
+@techreport{ portals4,
+    author  = { Brian W. Barrett and Ron Brightwell and Scott Hemmert and Kevin
+                Pedretti and Kyle Wheeler and Keith Underwood and Rolf Riesen and
+                Arthur B. Maccabe and Trammell Hudson},
+    title   = {The {Portals} 4.0.2 Network Programming Interface},
+    institution = {Sandia National Laboratories},
+    number  = {SAND2013-3181},
+    month   = {April},
+    year    = 2013
+}
+
+@INPROCEEDINGS{ bxi, 
+    author={S. Derradji and T. Palfer-Sollier and J. P. Panziera and A. Poudes and F. W. Atos}, 
+    booktitle={Proc. IEEE 23rd Annual Symposium on High-Performance Interconnects}, 
+    title={The {BXI} Interconnect Architecture}, 
+    year={2015}, 
+    pages={18-25}, 
+    doi={10.1109/HOTI.2015.15}, 
+    ISSN={1550-4794}, 
+    month={Aug}
+}
+
+@TechReport{ mpi-forum:15,
+  author    = "{MPI Forum}",
+  title     = "{MPI}: {A} Message-Passing Interface Standard Version 3.1",
+  institution = "University of Tennessee, Knoxville",
+  month     = "June",
+  year      = "2015",
+}
+
+@techreport{ upc-13-spec,
+    title = {{UPC} Language and Library Specifications, v1.3},
+    author = {{UPC Consortium}},
+    institution = {Lawrence Berkeley National Lab},
+    number = {LBNL-6623E},
+    month = nov,
+    year = 2013
+}
+
+@article{ ga,
+    author = {Nieplocha, Jarek and Palmer, Bruce and Tipparaju, Vinod and Krishnan, Manojkumar and Trease, Harold and Apra, Edoardo}, 
+    title = {Advances, Applications and Performance of the Global Arrays Shared Memory Programming Toolkit},
+    volume = {20}, 
+    number = {2}, 
+    pages = {203-231}, 
+    year = {2006}, 
+    journal = {International Journal of High Performance Computing Applications} 
+}
+
+@ARTICLE{brightwell:micro:06, 
+    author={R. Brightwell and K. T. Pedretti and K. D. Underwood and T. Hudson}, 
+    journal={IEEE Micro}, 
+    title={{SeaStar} Interconnect: {Balanced} Bandwidth for Scalable Performance}, 
+    year={2006}, 
+    volume={26}, 
+    number={3}, 
+    pages={41-57}, 
+    doi={10.1109/MM.2006.65}, 
+    ISSN={0272-1732}, 
+    month={May},
+}
+
+@article{reid:08,
+    author = {Reid, John},
+    title = {The New Features of {Fortran} 2008},
+    journal = {SIGPLAN Fortran Forum},
+    issue_date = {August 2008},
+    volume = {27},
+    number = {2},
+    month = aug,
+    year = {2008},
+    issn = {1061-7264},
+    pages = {8--21},
+    numpages = {14},
+    url = {http://doi.acm.org/10.1145/1408643.1408645},
+    doi = {10.1145/1408643.1408645},
+    acmid = {1408645},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+} 
