--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -142,7 +142,9 @@ James Dinan, Intel Corporation, Hudson, MA.
 
 % Acknowledgments
 \begin{acks}
-The authors would like to thank XSEDE for their big supercomputer powers.
+This work used the Extreme Science and Engineering Discovery Environment
+(XSEDE), which is supported by National Science Foundation grant number
+ACI-1053575.
 \end{acks}
 
 % Bibliography
