Fiddle with the title

--- a/doc/comhpc16/introduction.tex
+++ b/doc/comhpc16/introduction.tex
@@ -97,6 +97,7 @@ or PGAS system.
 
 This work makes the following contributions: First, we describe the
 design and implementation of a one-sided distributed hash table that
+supports a PGLAS data storage model and
 is amenable to network hardware offload in an HPC environment. Second,
 we describe a novel application of the Portals matching interface
 operations to realize a distributed data structure. Lastly, we provide
