--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -55,7 +55,7 @@
 %\markboth{G. Zhou et al.}{A Multifrequency MAC Specially Designed for WSN Applications}
 
 % Title portion
-\title{PGLAS: Extending Message Passing Runtimes to Support Partitioned, Global Logical Address Spaces}
+\title{Extending a Message Passing Runtime to Support Partitioned, Global Logical Address Spaces}
 \author{D. Brian Larkins
 \affil{Rhodes College}
 James Dinan
@@ -120,7 +120,7 @@ with logical addressing.
 
 \keywords{partitioned global address space, parallel data structures, hash tables, hardware acceleration, Portals}
 
-\acmformat{D. Brian Larkins, James Dinan, 2016. PGLAS: Extending Message Passing Runtimes to Support Partitioned, Global Logical Address Spaces}
+\acmformat{D. Brian Larkins, James Dinan, 2016. Extending a Message Passing Runtime to Support Partitioned, Global Logical Address Spaces}
 
 \begin{bottomstuff}
 
