--- a/doc/comhpc16/paper.tex
+++ b/doc/comhpc16/paper.tex
@@ -59,26 +59,26 @@
 \author{D. Brian Larkins
 \affil{Rhodes College}
 James Dinan
-\affil{Intel Corp.}}
+\affil{Intel Corporation}}
 
 
 \begin{abstract}
 
 Partitioned Global Address Space (PGAS) parallel programming models can provide
-an efficient mechanism for managing shared data stored across nodes in a
+an efficient mechanism for managing shared data stored across multiple nodes in a
 distributed memory system.  However, these models are traditionally directly
-addressed and for applications with loosely-structured or sparse data,
+addressed and, for applications with loosely-structured or sparse data,
 determining the location of a given data element within a PGAS can incur
 significant overheads.  When location resolution structures are remote,
 applications incur overhead from the network latency of remote lookups.
 Further, for large data, caching such structures locally incurs space and
 coherence overheads that can limit scaling.
-
+%
 We observe that the matching structures used by implementations of the Message
 Passing Interface (MPI) establish a separation between incoming data writes and
 the location where data will be stored.  In this work, we investigate extending
-such structures to establish a layer of indirection between incoming data reads
-and the location where data will be stored, effectively extending PGAS models
+such structures to add a layer of indirection between incoming data reads
+and the location from which data will be read, effectively extending PGAS models
 with logical addressing.
 
 \end{abstract}
